--- a/Assignment1.Library/Assignment1.Library.csproj
+++ b/Assignment1.Library/Assignment1.Library.csproj
@@ -10,10 +10,15 @@
     <None Remove="Models\" />
     <None Remove="Services\" />
     <None Remove="Database\" />
+    <None Remove="Utilities\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Services\" />
     <Folder Include="Database\" />
+    <Folder Include="Utilities\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 </Project>
