--- a/Assignment1.API/Assignment1.API/Assignment1.API.csproj
+++ b/Assignment1.API/Assignment1.API/Assignment1.API.csproj
@@ -15,9 +15,11 @@
 
   <ItemGroup>
     <None Remove="Database\" />
+    <None Remove="EC\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Database\" />
+    <Folder Include="EC\" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Assignment1.Library">
