--- a/Assignment1.Library/Assignment1.Library.csproj
+++ b/Assignment1.Library/Assignment1.Library.csproj
@@ -11,12 +11,14 @@
     <None Remove="Services\" />
     <None Remove="Database\" />
     <None Remove="Utilities\" />
+    <None Remove="DTO\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Services\" />
     <Folder Include="Database\" />
     <Folder Include="Utilities\" />
+    <Folder Include="DTO\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
